changed ui on homepage

--- a/app/views/home/_graph.html.erb
+++ b/app/views/home/_graph.html.erb
@@ -319,7 +319,7 @@
 </script>
 
 
-<div onLoad="graph()"  id="graph" style="height: 100%;border: 1px solid #000000;border-radius: 5px;">
+<div onLoad="graph()"  id="graph" style="height: 70vh;border: 1px solid #000000;border-radius: 5px;">
 
 
 </div>
