fixed site report ui

--- a/app/views/layouts/report_layout.html.erb
+++ b/app/views/layouts/report_layout.html.erb
@@ -34,6 +34,9 @@
       button{
         border-radius: 8px;
       }
+      td.content_center{
+         text-align: center;
+      }
     </style>
   </head>
 
