--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -12,7 +12,7 @@
       var title = ['Calculated From Raw Data', 'Verified By Clinic', 'Verified By Supervision'];
 <%else%>
       var path = [
-        "/report/report_menu?type=drug report",
+        "/report/report_menu?type=drug stock report",
         "/report/report_menu?type=drug utilization report",
         "/report/report_menu?type=site report",
         "/report/report_menu?type=aggregate report",
