--- a/app/views/report/drug_utilization_report.html.erb
+++ b/app/views/report/drug_utilization_report.html.erb
@@ -268,11 +268,8 @@
         days.sort(function(a,b){
             return new Date(a)-new Date(b);
         }).reverse();
-        while(table.rows.length > 1)
-        {
-            table.deleteRow(1);
-        }
 
+        $("#datalist").dataTable().fnClearTable();
         for (var i = 0; i < days.length; i++){
             var day = days[i];
             var row = create("tr", "table-row", "");
@@ -288,48 +285,6 @@
                 data[day]['ppo_who_received_drugs'].toString(),
                 get_ppo_who_not_give_drug(data[day]['ppo_prescribed_drugs'],data[day]['ppo_who_received_drugs'])
             ]);
-    /*
-            var td1 = create("td", "table-data", new Date(day).toLocaleFormat('%d %b %Y'));
-            td1.style.textAlign = "left"
-            row.appendChild(td1);
-
-
-            var td2 = create("td", "table-data",data[day]["prescription"].toString()) ;
-            td2.setAttribute("class", "drug_value");
-            td2.setAttribute("pills", data[day]["prescription"].toString())
-            td2.style.textAlign = "center";
-            row.appendChild(td2)
-
-            var td3 = create("td", "table-data", data[day]['dispensation'].toString());
-            td3.setAttribute("class", "drug_value");
-            td3.setAttribute("pills", data[day]["dispensation"].toString())
-            td3.style.textAlign = "center";
-            row.appendChild(td3)
-
-            var td4 = create("td", "table-data", get_pres_disp_diff(data[day]["prescription"],data[day]['dispensation'] ));
-            td4.style.textAlign = "center";
-            row.appendChild(td4)
-
-
-            var td5 = create("td", "table-data", data[day]['relocated_drugs'].toString());
-            td5.setAttribute("class", "drug_value");
-            td5.setAttribute("pills", data[day]["relocated_drugs"].toString())
-            td5.style.textAlign = "center";
-            row.appendChild(td5)
-
-            var td7 = create("td", "table-data", data[day]['ppo_prescribed_drugs'].toString());
-            td7.style.textAlign = "center";
-            row.appendChild(td7)
-
-            var td6 = create("td", "table-data", data[day]['ppo_who_received_drugs'].toString());
-            td6.style.textAlign = "center";
-            row.appendChild(td6)
-
-            var td8 = create("td", "table-data", get_ppo_who_not_give_drug(data[day]['ppo_prescribed_drugs'],data[day]['ppo_who_received_drugs']));
-            td8.style.textAlign = "center";
-            row.appendChild(td8)
-
-            table.appendChild(row);*/
             var utc = new Date(day);
             prescription += data[day]["prescription"];
             dispensation += data[day]['dispensation'];
