--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,51 +1,159 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>DMP</title>
-  <script type="text/javascript">
-     function setup()
-     {
-        <% if User.current.user_role.role.role != "Administrator" %>
-            document.getElementById('items').deleteCell(3);
-        <% end %>
-     }
+  <title>Pharmacy Monitoring Dashboard</title>
+  <%= stylesheet_link_tag :all %>
+  <%= javascript_include_tag :defaults %>
+  <%= csrf_meta_tag %>
+  <style>
+      a{
+          font-size: 150%;
+      }
+      div.container{
+          width: 100%;
+      }
+  </style>
+  <script src="/javascripts/jquery.js"></script>
+  <script src="/javascripts/bootstrap.js"></script>
+  <script src="/javascripts/jquery.validate.js"></script>
+  <script src="/javascripts/jquery.knob.js"></script>
+
+  <script>
+
+      /* bootstrap-dropdown.js v2.0.2
+
+       * http://twitter.github.com/bootstrap/javascript.html#dropdowns
+       * ============================================================
+       * Copyright 2012 Twitter, Inc.
+       *
+       * Licensed under the Apache License, Version 2.0 (the "License");
+       * you may not use this file except in compliance with the License.
+       * You may obtain a copy of the License at
+       *
+       * http://www.apache.org/licenses/LICENSE-2.0
+       *
+       * Unless required by applicable law or agreed to in writing, software
+       * distributed under the License is distributed on an "AS IS" BASIS,
+       * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+       * See the License for the specific language governing permissions and
+       * limitations under the License.
+       */
+      !function( $ ){
+          "use strict"
+          /* DROPDOWN CLASS DEFINITION
+           * ========================= */
+          var toggle = '[data-toggle="dropdown"]'
+                  , Dropdown = function ( element ) {
+                      var $el = $(element).on('click.dropdown.data-api', this.toggle)
+                      $('html').on('click.dropdown.data-api', function () {
+                          $el.parent().removeClass('open')
+                      })
+                  }
+          Dropdown.prototype = {
+              constructor: Dropdown
+              , toggle: function ( e ) {
+                  var $this = $(this)
+                          , selector = $this.attr('data-target')
+                          , $parent
+                          , isActive
+
+                  if (!selector) {
+                      selector = $this.attr('href')
+                      selector = selector && selector.replace(/.*(?=#[^\s]*$)/, '') //strip for ie7
+                  }
+
+                  $parent = $(selector)
+                  $parent.length || ($parent = $this.parent())
+                  isActive = $parent.hasClass('open')
+                  clearMenus()
+                  !isActive && $parent.toggleClass('open')
+                  return false
+              }
+          }
+
+          function clearMenus() {
+              $(toggle).parent().removeClass('open')
+          }
+          /* DROPDOWN PLUGIN DEFINITION
+           * ========================== */
+          $.fn.dropdown = function ( option ) {
+              return this.each(function () {
+                  var $this = $(this)
+                          , data = $this.data('dropdown')
+                  if (!data) $this.data('dropdown', (data = new Dropdown(this)))
+                  if (typeof option == 'string') data[option].call($this)
+              })
+          }
+          $.fn.dropdown.Constructor = Dropdown
+          /* APPLY TO STANDARD DROPDOWN ELEMENTS
+           * =================================== */
+          $(function () {
+              $('html').on('click.dropdown.data-api', clearMenus)
+              $('body').on('click.dropdown.data-api', toggle, Dropdown.prototype.toggle)
+          })
+      }( window.jQuery );
   </script>
-  <%= javascript_include_tag 'jquery' %>
-  <script language="javascript" type="text/javascript" src="/javascripts/jquery.ui.draggable.js"></script>
-  <script language="javascript" type="text/javascript" src="/javascripts/jquery.alerts.js"></script>
-  <script language="javascript" type="text/javascript" src="/javascripts/application.js"></script>
-  <link rel="stylesheet" type="text/css" href="/stylesheets/application.css" />
-  <link href="/stylesheets/jquery.alerts.css" rel="stylesheet" type="text/css" media="screen" />
+
+  <script type='text/javascript'>//<![CDATA[
+  $(window).load(function(){
+      jQuery('.submenu').hover(function () {
+          jQuery(this).children('ul').removeClass('submenu-hide').addClass('submenu-show');
+      }, function () {
+          jQuery(this).children('ul').removeClass('.submenu-show').addClass('submenu-hide');
+      }).find("a:first").append(" &raquo; ");
+  });//]]>
+  </script>
+
 </head>
+<body>
+<div class="navbar navbar-inverse navbar-fixed-top" style="background: #15191C !important;" role="navigation">
+  <div class="container" style="color: #ffffff;height: 9vh;">
+    <div class="navbar-header">
 
-<body  onload="setup()">
-<div class="heading" >
-  <table class="menu" cellspacing="0px">
-    <tr>
-      <td style="width: 60px;"><img src="/images/app.png" style="float: left;margin-top: 5px;margin-left: 5px;height:60px;"></td>
-      <td style="text-align: left;vertical-align: text-top;">
-        <span style="font-size: 35px;color: #C0C0C0;font-family:arial;">
-            Pharmacy Monitoring Dashboard
-          </span>
-      </td>
-
-      <td class="link" onmousedown="window.location='/'">Home</td>
-      <td class="link" onmousedown="window.location= '/report/index'">Report</td>
-      <%if User.current.user_role.role.role != 'Other' %>
-        <td class="link" onmousedown="window.location='/administration/index'" >Administration</td>
-       <% end %>
-      <td class="link" onmousedown="window.location= '/user/logout'">Logout</td>
-    </tr>
-  </table>
-
+      <img src="/images/app.png" style="float: left;margin-top: 5px;margin-left: 5px;height:8vh;">
+      <span class="navbar-brand" style="color: #C0C0C0;font-size: 200%; ">Pharmacy Monitoring Dashboard</span>
+    </div>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reports<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="/report/report_menu?type=drug stock report">Drug Stock Report</a></li>
+            <li><a href="/report/report_menu?type=drug utilization report">Drug Utilization Report</a></li>
+            <li><a href="/report/report_menu?type=site report">Site Report</a></li>
+            <li><a href="/report/report_menu?type=aggregate report">Aggregate Report</a></li>
+            <li><a href="/report/report_menu?type=delivery report">Delivery Report</a></li>
+            <li><a href="/report/stock_out_estimates?type=verified_by_supervision&name=months_of_stock">Months of Stock</a></li>
+            <li><a href="/report/report_menu?type=stock movement&name=stock_movement">Stock Movement</a></li>
+          </ul>
+        </li>
+        <%if User.current.user_role.role.role != 'Other' %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="/administration/add_site">Add Site</a></li>
+                <li><a href="/administration/edit_site">Edit Site</a></li>
+                <li><a href="/user/create">Add User</a></li>
+                <li><a href="/user/edit">Edit user</a></li>
+              </ul>
+            </li>
+        <% end%>
+        <li><a href="/user/logout">Logout</a></li>
+      </ul>
+    </div>
+  </div>
 </div>
-
-<div class="content">
-  <%= yield %>
+<div class="container">
+  <div class="starter-template" style="margin-top: 10vh;overflow: auto;">
+    <%= yield %>
+  </div>
 </div>
-<div class="footer">
-
+<div class="navbar  navbar-inverse navbar-fixed-bottom" style="min-height: 20px !important;
+        color: #ccc !important; text-align: center !important; padding-top: 1px !important;
+        background: #15191C !important;max-height: 30px !important;">
+  &copy; <%= Date.today.strftime("%Y") %> <a href="http://www.baobabhealth.org" target="_blank">
+  Baobab Health Trust</a> with funding from Centres For Disease Control(CDC)
 </div>
 </body>
 </html>
