--- a/app/views/home/notices.html.erb
+++ b/app/views/home/notices.html.erb
@@ -357,6 +357,9 @@
                     })
                     .on("mouseout", function(){
                         return tooltip.style("visibility", "hidden");
+                    })
+                    .on("click", function(){
+                       window.open('manage_notices?site_name=' + this.id + "&category=notices", "_parent")
                     });
             meter.append("path")
                     .attr("class", "background-most")
