Working on notices management page

--- a/app/views/home/low_stock.html.erb
+++ b/app/views/home/low_stock.html.erb
@@ -135,14 +135,14 @@
                 .attr("dy", ".75em")
                 .attr("fill", "green")
                 .style("font-size", "24px")
-                .text("Patient");
+                .text("Sites with");
 
         tsvg.append("text")
                 .attr("text-anchor", "middle")
                 .attr("dy", ".75em")
                 .attr("fill", "green")
                 .style("font-size", "24px")
-                .text("Migration Map")
+                .text("Low stock")
                 .attr("transform", "translate(0,30)");
 
         tsvg.append("rect")
